--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 </div>
   
    </section>     
-        <section class="container contact" id="contact">
+       <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
                     <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
@@ -388,7 +388,14 @@
                                     <span>University of Singidunum</span>
                                 </p>
                             </div>
-                           
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-user-graduate"></i>
+                                    <span>Mobile Number</span>
+                                </div>
+                                <p>
+                                    <span>###############</span>
+                                </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
