--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/1682803963410.jpg" alt="">
+                    <img src="img/me.png" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -29,7 +29,7 @@
                     As a software engineering student, I spend my time learning about the latest technologies and best practices in the industry. I have a strong passion for designing and developing software solutions that are both elegant and functional.
                 </p>
                 <div class="btn-con">
-                    <a href="Resum.pdf" class="main-btn">
+                    <a href="myCV.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -51,7 +51,7 @@
                         I have spent countless hours learning about programming languages, frameworks, and industry best practices, and I am always eager to explore new technologies and stay up-to-date with the latest developments in the field. <br /> <br /> From developing websites to creating custom software applications, I have tackled a variety of challenges and worked with a range of clients from different industries. Each project has been an opportunity to learn and grow, and I am proud of the work that I have done.
                     </p>
                     <div class="btn-con">
-                        <a href="Resum.pdf" class="main-btn">
+                        <a href="myCV.pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
